--- a/smart_network/smart_hub/smart_hub.vcxproj.filters
+++ b/smart_network/smart_hub/smart_hub.vcxproj.filters
@@ -40,6 +40,9 @@
       <Filter>service</Filter>
     </ClInclude>
     <ClInclude Include="asio_fwd.h" />
+    <ClInclude Include="service\service_finder.h">
+      <Filter>service</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ctrl_point.cpp" />
@@ -75,6 +78,9 @@
       <Filter>service</Filter>
     </ClCompile>
     <ClCompile Include="service\service_pool.cpp">
+      <Filter>service</Filter>
+    </ClCompile>
+    <ClCompile Include="service\service_finder.cpp">
       <Filter>service</Filter>
     </ClCompile>
   </ItemGroup>
