--- a/smart_network/sample_devices/console/console.vcxproj
+++ b/smart_network/sample_devices/console/console.vcxproj
@@ -80,26 +80,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\base\chat_message.cpp" />
-    <ClCompile Include="..\..\third_party\jsoncpp-0.5.0\src\lib_json\json_reader.cpp" />
-    <ClCompile Include="..\..\third_party\jsoncpp-0.5.0\src\lib_json\json_value.cpp" />
-    <ClCompile Include="..\..\third_party\jsoncpp-0.5.0\src\lib_json\json_writer.cpp" />
     <ClCompile Include="connection.cpp" />
     <ClCompile Include="device.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\base\chat_message.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\autolink.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\config.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\features.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\forwards.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\json.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\reader.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\value.h" />
-    <ClInclude Include="..\..\third_party\jsoncpp-0.5.0\include\json\writer.h" />
     <ClInclude Include="connection.h" />
     <ClInclude Include="device.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\codebase\codebase.vcxproj">
+      <Project>{838ba03f-cf78-4a0d-abc9-8a0b103e8711}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\jsoncpp\jsoncpp.vcxproj">
+      <Project>{ce6f9b98-25c2-47b1-8e13-cbccd80866df}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
