refactoring and append unit-tests - make and refactoring complete ssdp.h&cpp from UDP network blocks. - make ssdp unit-tests with gmock.

--- a/smart_network/test/test.vcxproj.filters
+++ b/smart_network/test/test.vcxproj.filters
@@ -3,5 +3,6 @@
   <ItemGroup>
     <ClCompile Include="test.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="..\codebase\ssdp_test.cpp" />
   </ItemGroup>
 </Project>
