add websocket manager - http_websocket_manager.h&cpp - manage to insert and remove websocket connection(s). - fire event and ping websocket - if any connection failed data transfer, remove it from list.

--- a/smart_network/smart_hub/smart_hub.vcxproj
+++ b/smart_network/smart_hub/smart_hub.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="http\http_request.h" />
     <ClInclude Include="http\http_server.h" />
     <ClInclude Include="http\http_websocket.h" />
+    <ClInclude Include="http\http_websocket_manager.h" />
     <ClInclude Include="service\service.h" />
     <ClInclude Include="service\service_info.h" />
     <ClInclude Include="service\service_pool.h" />
@@ -103,6 +104,7 @@
     <ClCompile Include="http\http_request.cpp" />
     <ClCompile Include="http\http_server.cpp" />
     <ClCompile Include="http\http_websocket.cpp" />
+    <ClCompile Include="http\http_websocket_manager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="service\service.cpp" />
     <ClCompile Include="service\service_info.cpp" />
