--- a/smart_network/smart_hub/smart_hub.vcxproj
+++ b/smart_network/smart_hub/smart_hub.vcxproj
@@ -81,17 +81,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="channel.h" />
+    <ClInclude Include="channel_delegator.h" />
     <ClInclude Include="ctrl_point.h" />
     <ClInclude Include="http\http_fwd.h" />
     <ClInclude Include="http\http_object.h" />
     <ClInclude Include="http\http_request.h" />
-    <ClInclude Include="http\http_server.h" />
-    <ClInclude Include="http\http_websocket.h" />
+    <ClInclude Include="http\http_ui_object.h" />
     <ClInclude Include="http\http_websocket_manager.h" />
     <ClInclude Include="http\http_websocket_ping_scheduler.h" />
+    <ClInclude Include="main_ui_service.h" />
+    <ClInclude Include="main_ui_handler.h" />
     <ClInclude Include="service\service.h" />
     <ClInclude Include="service\service_info.h" />
-    <ClInclude Include="service\service_pool.h" />
+    <ClInclude Include="service_factory.h" />
+    <ClInclude Include="service_proxy.h" />
     <ClInclude Include="tcp_channel.h" />
     <ClInclude Include="tcp_server.h" />
     <ClInclude Include="uart_channel.h" />
@@ -103,14 +106,15 @@
     <ClCompile Include="ctrl_point.cpp" />
     <ClCompile Include="http\http_object.cpp" />
     <ClCompile Include="http\http_request.cpp" />
-    <ClCompile Include="http\http_server.cpp" />
-    <ClCompile Include="http\http_websocket.cpp" />
+    <ClCompile Include="http\http_ui_object.cpp" />
     <ClCompile Include="http\http_websocket_manager.cpp" />
     <ClCompile Include="http\http_websocket_ping_scheduler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="main_ui_service.cpp" />
     <ClCompile Include="service\service.cpp" />
     <ClCompile Include="service\service_info.cpp" />
-    <ClCompile Include="service\service_pool.cpp" />
+    <ClCompile Include="service_factory.cpp" />
+    <ClCompile Include="service_proxy.cpp" />
     <ClCompile Include="tcp_channel.cpp" />
     <ClCompile Include="tcp_server.cpp" />
     <ClCompile Include="uart_channel.cpp" />
