--- a/smart_network/codebase/codebase.vcxproj.filters
+++ b/smart_network/codebase/codebase.vcxproj.filters
@@ -5,10 +5,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chat_message.h" />
-    <ClInclude Include="device\device_info.h">
+    <ClInclude Include="device\device_desc.h">
       <Filter>device</Filter>
     </ClInclude>
-    <ClInclude Include="device\device_pool.h">
+    <ClInclude Include="device\device_manager.h">
       <Filter>device</Filter>
     </ClInclude>
     <ClInclude Include="utility.h" />
@@ -17,10 +17,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chat_message.cpp" />
-    <ClCompile Include="device\device_info.cpp">
+    <ClCompile Include="device\device_desc.cpp">
       <Filter>device</Filter>
     </ClCompile>
-    <ClCompile Include="device\device_pool.cpp">
+    <ClCompile Include="device\device_manager.cpp">
       <Filter>device</Filter>
     </ClCompile>
     <ClCompile Include="utility.cpp" />
