--- a/smart_network/test/test.vcxproj.filters
+++ b/smart_network/test/test.vcxproj.filters
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="..\codebase\ssdp_test.cpp" />
+    <ClCompile Include="..\codebase\http_object_test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="static.h" />
   </ItemGroup>
 </Project>
