--- a/smart_network/test/test.vcxproj.filters
+++ b/smart_network/test/test.vcxproj.filters
@@ -4,9 +4,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="..\codebase\ssdp_test.cpp" />
     <ClCompile Include="..\codebase\http_object_test.cpp" />
-    <ClCompile Include="..\codebase\http_download_test.cpp" />
+    <ClCompile Include="fake_browser.cpp" />
+    <ClCompile Include="fake_browser_test.cpp" />
+    <ClCompile Include="mongoose_mock.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="static.h" />
+    <ClInclude Include="fake_browser.h" />
+    <ClInclude Include="mongoose_mock.h" />
   </ItemGroup>
 </Project>
