--- a/smart_network/codebase/codebase.vcxproj.filters
+++ b/smart_network/codebase/codebase.vcxproj.filters
@@ -12,7 +12,7 @@
       <Filter>device</Filter>
     </ClInclude>
     <ClInclude Include="utility.h" />
-    <ClInclude Include="ssdp.h" />
+    <ClInclude Include="ssdp_listener.h" />
     <ClInclude Include="boost_lib_fwd.h" />
     <ClInclude Include="http_websocket_ping_scheduler.h" />
     <ClInclude Include="http_object.h" />
@@ -21,6 +21,9 @@
     <ClInclude Include="http_websocket_manager.h" />
     <ClInclude Include="channel.h" />
     <ClInclude Include="channel_delegate.h" />
+    <ClInclude Include="ssdp_ethernet_sender.h" />
+    <ClInclude Include="ssdp_sender.h" />
+    <ClInclude Include="ssdp_scheduler.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chat_message.cpp" />
@@ -31,12 +34,14 @@
       <Filter>device</Filter>
     </ClCompile>
     <ClCompile Include="utility.cpp" />
-    <ClCompile Include="ssdp.cpp" />
+    <ClCompile Include="ssdp_listener.cpp" />
     <ClCompile Include="http_websocket_ping_scheduler.cpp" />
     <ClCompile Include="http_object.cpp" />
     <ClCompile Include="http_request.cpp" />
     <ClCompile Include="http_ui_object.cpp" />
     <ClCompile Include="http_websocket_manager.cpp" />
+    <ClCompile Include="ssdp_ethernet_sender.cpp" />
+    <ClCompile Include="ssdp_scheduler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="device">
