--- a/smart_network/smart_hub/smart_hub.vcxproj.filters
+++ b/smart_network/smart_hub/smart_hub.vcxproj.filters
@@ -4,35 +4,20 @@
     <ClInclude Include="ctrl_point.h" />
     <ClInclude Include="tcp_channel.h" />
     <ClInclude Include="tcp_adapter.h" />
-    <ClInclude Include="service\service.h">
-      <Filter>service</Filter>
-    </ClInclude>
-    <ClInclude Include="service\service_desc.h">
-      <Filter>service</Filter>
-    </ClInclude>
     <ClInclude Include="service_broker.h" />
     <ClInclude Include="service_factory.h" />
     <ClInclude Include="main_ui_service.h" />
     <ClInclude Include="main_ui_handler.h" />
+    <ClInclude Include="service_desc.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ctrl_point.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tcp_channel.cpp" />
     <ClCompile Include="tcp_adapter.cpp" />
-    <ClCompile Include="service\service.cpp">
-      <Filter>service</Filter>
-    </ClCompile>
-    <ClCompile Include="service\service_desc.cpp">
-      <Filter>service</Filter>
-    </ClCompile>
     <ClCompile Include="service_broker.cpp" />
     <ClCompile Include="service_factory.cpp" />
     <ClCompile Include="main_ui_service.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="service">
-      <UniqueIdentifier>{b2d16d58-d9eb-4ed3-b05e-c5aed8869125}</UniqueIdentifier>
-    </Filter>
+    <ClCompile Include="service_desc.cpp" />
   </ItemGroup>
 </Project>
