--- a/smart_network/test/test.vcxproj
+++ b/smart_network/test/test.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\codebase\http_object_test.cpp" />
+    <ClCompile Include="..\codebase\ssdp_ethernet_test.cpp" />
     <ClCompile Include="..\codebase\ssdp_test.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="fake_browser.cpp" />
