--- a/smart_network/gmock/gmock.vcxproj
+++ b/smart_network/gmock/gmock.vcxproj
@@ -47,6 +47,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\gmock-1.7.0\gtest\include;$(SolutionDir)..\third_party\gmock-1.7.0\gtest;$(SolutionDir)..\third_party\gmock-1.7.0\include;$(SolutionDir)..\third_party\gmock-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4819</DisableSpecificWarnings>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -64,6 +65,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\gmock-1.7.0\gtest\include;$(SolutionDir)..\third_party\gmock-1.7.0\gtest;$(SolutionDir)..\third_party\gmock-1.7.0\include;$(SolutionDir)..\third_party\gmock-1.7.0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4819</DisableSpecificWarnings>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
