--- a/smart_network/jsoncpp/jsoncpp.vcxproj
+++ b/smart_network/jsoncpp/jsoncpp.vcxproj
@@ -10,6 +10,11 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\third_party\jsoncpp-src-0.5.0\src\lib_json\json_reader.cpp" />
+    <ClCompile Include="..\third_party\jsoncpp-src-0.5.0\src\lib_json\json_value.cpp" />
+    <ClCompile Include="..\third_party\jsoncpp-src-0.5.0\src\lib_json\json_writer.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CE6F9B98-25C2-47B1-8E13-CBCCD80866DF}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -45,7 +50,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\jsoncpp-0.5.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\jsoncpp-src-0.5.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -61,7 +67,8 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\jsoncpp-0.5.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\jsoncpp-src-0.5.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -70,21 +77,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\autolink.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\config.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\features.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\forwards.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\json.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\reader.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\value.h" />
-    <ClInclude Include="..\third_party\jsoncpp-0.5.0\include\json\writer.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\third_party\jsoncpp-0.5.0\src\lib_json\json_reader.cpp" />
-    <ClCompile Include="..\third_party\jsoncpp-0.5.0\src\lib_json\json_value.cpp" />
-    <ClCompile Include="..\third_party\jsoncpp-0.5.0\src\lib_json\json_writer.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
