--- a/smart_network/mongoose/mongoose.vcxproj.filters
+++ b/smart_network/mongoose/mongoose.vcxproj.filters
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="..\third_party\mongoose-4.1\mongoose\mongoose.c" />
+    <ClCompile Include="..\third_party\mongoose-5.2\mongoose.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\third_party\mongoose-4.1\mongoose\mongoose.h" />
+    <ClInclude Include="..\third_party\mongoose-5.2\mongoose.h" />
   </ItemGroup>
 </Project>
